--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,39 @@
 </head>
 <body>
     <h1>Lasagna Recipe</h1>
-
     <a href="../index.html">Back to Home Page</a>
+    
+    <br>
+    <img src="../images/lasagna.jpg" alt="Image of a lasagna" height="310" width="310">
+
+    <br>
+    <h2>Description</h2>
+    <p>Lasagna is a classic Italian dish that consists of layers of pasta, meat sauce, and cheese. It's a hearty and comforting meal that's perfect for 
+    family dinners or special occasions.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>12 lasagna noodles</li>
+        <li>1 pound ground beef</li>
+        <li>2 cups marinara sauce</li>
+        <li>1 cup ricotta cheese</li>
+        <li>2 cups shredded mozzarella cheese</li>
+        <li>1/2 cup grated Parmesan cheese</li>
+        <li>2 cloves garlic, minced</li>
+        <li>1 teaspoon dried basil</li>
+        <li>1 teaspoon dried oregano</li>
+        <li>Salt and pepper to taste</li>
+    </ul>
+    <h2>Instructions</h2>
+    <ol>
+        <li>Preheat your oven to 375°F (190°C).</li>
+        <li>Cook the lasagna noodles according to the package instructions. Drain and set aside
+        <li>In a large skillet, cook the ground beef over medium heat until browned. Add the minced garlic, dried basil, dried oregano, salt, and pepper. Cook for another 2 minutes.</li>
+        <li>Add the marinara sauce to the skillet and simmer for 10 minutes.</li>
+        <li>In a baking dish, spread a thin layer of the meat sauce. Layer with lasagna noodles, ricotta cheese, meat sauce, and shredded mozzarella cheese. Repeat the layers until all ingredients are used, ending with a layer of meat sauce and mozzarella cheese. Sprinkle grated Parmesan cheese on top.</li>
+        <li>Cover the baking dish with aluminum foil and bake for 25 minutes. Remove the foil and bake for an additional 25 minutes, or until the cheese is bubbly and golden brown.</li>
+        <li>Let the lasagna cool for 10 minutes before serving. Enjoy!</li>
+    </ol>
+
+
 </body>
 </html>
